# fastparquet

./: .gitignore  pyproject.toml  setup.cfg  setup.py
fastparquet/: cencoding.pyx  writer.py
