[metadata]
name = fastparquet
version = 0.5.0
description = Python support for Parquet file format
author = Martin Durant
author_email = mdurant@anaconda.com
url = https://github.com/dask/fastparquet/
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.6
install_requires =
    pandas >=1.1.0
    numba >=0.49
    numpy >=1.11
    thrift >=0.11.0
    cramjam >=2.2.0

[aliases]
test = pytest

[tool:pytest]
addopts = -x -vv
